[package]
name = "rs-time2json"
version = "0.1.0"
edition = "2021"

[dependencies.rs-perf-test-helper]
path = "../../../../../"
default-features = false
features = [
	"uv4",
]

[dependencies.tokio]
version = "1.32.0"
default-features = false
features = [
	"rt-multi-thread",
	"macros",
]


[dependencies.serde]
version = "1.0.188"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.107"
default-features = false
features = [
	"std",
]
